# api/docs/swagger.json
@@ -2230,12 +2230,6 @@
                     },
                     {
                         "type": "string",
-                        "description": "search_staff_id",
-                        "name": "search_staff_id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "search_source_type",
                         "name": "search_source_type",
                         "in": "query"
