# api/handler/staff_transaction.go
@@ -49,7 +49,6 @@ func (h *handler) GetByIdStaffTransaction(c *gin.Context) {
 // @Param offset query string false "offset"
 // @Param limit query string false "limit"
 // @Param search_sale_id query string false "search_sale_id"
-// @Param search_staff_id query string false "search_staff_id"
 // @Param search_source_type query string false "search_source_type"
 // @Param search_price_type query string false "search_price_type"
 // @Success 200 {object} Response{data=string} "Success Request"
